--- a/NNet/NNetSimu/WindowConfiguration1.cnf
+++ b/NNet/NNetSimu/WindowConfiguration1.cnf
@@ -1,13 +1,13 @@
-MoveWindow IDM_APPL_WINDOW -1815 1089 1774 1037
-MoveWindow IDM_MAIN_WINDOW -1807 1141 1759 956
-MoveWindow IDM_MINI_WINDOW -792 1147 648 648
-MoveWindow IDM_MONITOR_WINDOW -1906 1403 579 277
+MoveWindow IDM_APPL_WINDOW -1815 1089 1776 1039
+MoveWindow IDM_MAIN_WINDOW -1807 1141 1761 958
+MoveWindow IDM_MINI_WINDOW -792 1147 650 650
+MoveWindow IDM_MONITOR_WINDOW -1906 1403 507 279
 MoveWindow IDM_CRSR_WINDOW -795 1794 302 227
 MoveWindow IDM_PARAM_WINDOW -318 1510 282 556
 MoveWindow IDM_PERF_WINDOW -326 1451 302 352
-MoveWindow IDM_DESC_WINDOW -1828 1367 648 648
-MoveWindow IDM_SIG_DESIGNER -898 1272 848 640
-MoveWindow IDM_LUT_DESIGNER -686 1561 323 223
+MoveWindow IDM_DESC_WINDOW -1828 1367 650 650
+MoveWindow IDM_SIG_DESIGNER -1244 1166 911 855
+MoveWindow IDM_LUT_DESIGNER -686 1561 325 225
 ShowWindow IDM_APPL_WINDOW SW_SHOWNORMAL
 ShowWindow IDM_MAIN_WINDOW SW_SHOWNORMAL
 ShowWindow IDM_MINI_WINDOW SW_SHOWNORMAL
@@ -16,5 +16,5 @@ ShowWindow IDM_CRSR_WINDOW SW_SHOWNORMAL
 ShowWindow IDM_PARAM_WINDOW SW_SHOWNORMAL
 ShowWindow IDM_PERF_WINDOW SW_SHOWNORMAL
 ShowWindow IDM_DESC_WINDOW SW_HIDE
-ShowWindow IDM_SIG_DESIGNER SW_HIDE
+ShowWindow IDM_SIG_DESIGNER SW_SHOWNORMAL
 ShowWindow IDM_LUT_DESIGNER SW_HIDE
