--- a/NNet/NNetSignals/NNetSignals.vcxproj.filters
+++ b/NNet/NNetSignals/NNetSignals.vcxproj.filters
@@ -72,5 +72,8 @@
     <ClCompile Include="EventViewer.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="NNetTimeGraph.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
