--- a/NNet/NNetSimu/WindowConfiguration1.cnf
+++ b/NNet/NNetSimu/WindowConfiguration1.cnf
@@ -1,20 +1,20 @@
-MoveWindow IDM_APPL_WINDOW -1815 1089 1778 1041
-MoveWindow IDM_MAIN_WINDOW -1807 1141 1763 960
-MoveWindow IDM_MINI_WINDOW -792 1147 652 652
-MoveWindow IDM_MONITOR_WINDOW -1906 1403 509 281
+MoveWindow IDM_APPL_WINDOW -1842 1106 1809 996
+MoveWindow IDM_MAIN_WINDOW -1834 1158 1794 915
+MoveWindow IDM_MINI_WINDOW -792 1147 653 653
+MoveWindow IDM_MONITOR_WINDOW -1887 1427 510 282
 MoveWindow IDM_CRSR_WINDOW -795 1794 302 227
-MoveWindow IDM_PARAM_WINDOW -318 1510 282 556
+MoveWindow IDM_PARAM_WINDOW -318 1554 282 556
 MoveWindow IDM_PERF_WINDOW -326 1451 302 352
-MoveWindow IDM_DESC_WINDOW -1828 1367 652 652
-MoveWindow IDM_SIG_DESIGNER -1282 1166 951 857
-MoveWindow IDM_LUT_DESIGNER -686 1561 327 227
+MoveWindow IDM_DESC_WINDOW -1828 1367 653 653
+MoveWindow IDM_SIG_DESIGNER -957 1169 952 383
+MoveWindow IDM_LUT_DESIGNER -686 1561 328 228
 ShowWindow IDM_APPL_WINDOW SW_SHOWNORMAL
 ShowWindow IDM_MAIN_WINDOW SW_SHOWNORMAL
-ShowWindow IDM_MINI_WINDOW SW_SHOWNORMAL
+ShowWindow IDM_MINI_WINDOW SW_HIDE
 ShowWindow IDM_MONITOR_WINDOW SW_SHOWNORMAL
-ShowWindow IDM_CRSR_WINDOW SW_SHOWNORMAL
+ShowWindow IDM_CRSR_WINDOW SW_HIDE
 ShowWindow IDM_PARAM_WINDOW SW_SHOWNORMAL
-ShowWindow IDM_PERF_WINDOW SW_SHOWNORMAL
+ShowWindow IDM_PERF_WINDOW SW_HIDE
 ShowWindow IDM_DESC_WINDOW SW_HIDE
 ShowWindow IDM_SIG_DESIGNER SW_SHOWNORMAL
 ShowWindow IDM_LUT_DESIGNER SW_HIDE
