--- a/NNet/NNetSimu/WindowConfiguration1.cnf
+++ b/NNet/NNetSimu/WindowConfiguration1.cnf
@@ -1,13 +1,13 @@
-MoveWindow IDM_APPL_WINDOW -1842 1106 1813 1000
-MoveWindow IDM_MAIN_WINDOW -1834 1158 1798 919
-MoveWindow IDM_MINI_WINDOW -792 1147 657 657
-MoveWindow IDM_MONITOR_WINDOW -1887 1427 514 286
+MoveWindow IDM_APPL_WINDOW -1842 1106 1815 1002
+MoveWindow IDM_MAIN_WINDOW -1834 1158 1800 921
+MoveWindow IDM_MINI_WINDOW -792 1147 659 659
+MoveWindow IDM_MONITOR_WINDOW -1887 1427 516 288
 MoveWindow IDM_CRSR_WINDOW -795 1794 302 227
 MoveWindow IDM_PARAM_WINDOW -318 1554 282 556
 MoveWindow IDM_PERF_WINDOW -326 1451 302 352
-MoveWindow IDM_DESC_WINDOW -1828 1367 657 657
-MoveWindow IDM_SIG_DESIGNER -1219 1141 1011 584
-MoveWindow IDM_LUT_DESIGNER -686 1561 332 232
+MoveWindow IDM_DESC_WINDOW -1828 1367 659 659
+MoveWindow IDM_SIG_DESIGNER -1219 1141 1013 860
+MoveWindow IDM_LUT_DESIGNER -686 1561 334 234
 ShowWindow IDM_APPL_WINDOW SW_SHOWNORMAL
 ShowWindow IDM_MAIN_WINDOW SW_SHOWNORMAL
 ShowWindow IDM_MINI_WINDOW SW_HIDE
@@ -16,5 +16,5 @@ ShowWindow IDM_CRSR_WINDOW SW_HIDE
 ShowWindow IDM_PARAM_WINDOW SW_SHOWNORMAL
 ShowWindow IDM_PERF_WINDOW SW_HIDE
 ShowWindow IDM_DESC_WINDOW SW_HIDE
-ShowWindow IDM_SIG_DESIGNER SW_HIDE
+ShowWindow IDM_SIG_DESIGNER SW_SHOWNORMAL
 ShowWindow IDM_LUT_DESIGNER SW_HIDE
