--- a/Evo/EvolutionCore/EvolutionCore.vcxproj.filters
+++ b/Evo/EvolutionCore/EvolutionCore.vcxproj.filters
@@ -18,9 +18,6 @@
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="targetver.h">
-      <Filter>Headerdateien</Filter>
-    </ClInclude>
     <ClInclude Include="EvolutionCoreImpl.h">
       <Filter>Headerdateien</Filter>
     </ClInclude>
@@ -33,12 +30,6 @@
     <ClInclude Include="EvolutionCoreWrappers.h">
       <Filter>Headerdateien</Filter>
     </ClInclude>
-    <ClInclude Include="EvoPixelCoords.h">
-      <Filter>Headerdateien</Filter>
-    </ClInclude>
-    <ClInclude Include="EvoStatistics.h">
-      <Filter>Headerdateien</Filter>
-    </ClInclude>
     <ClInclude Include="geneTypeLimits.h">
       <Filter>Headerdateien</Filter>
     </ClInclude>
@@ -48,12 +39,9 @@
     <ClInclude Include="gridSelection.h">
       <Filter>Headerdateien</Filter>
     </ClInclude>
-    <ClInclude Include="PixelCore.h">
-      <Filter>Headerdateien</Filter>
-    </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="config.cpp">
+    <ClCompile Include="Config.cpp">
       <Filter>Quelldateien</Filter>
     </ClCompile>
     <ClCompile Include="EvolutionCore.cpp">
@@ -77,7 +65,7 @@
     <ClCompile Include="GridNeighbor.cpp">
       <Filter>Quelldateien</Filter>
     </ClCompile>
-    <ClCompile Include="gridRect.cpp">
+    <ClCompile Include="GridRect.cpp">
       <Filter>Quelldateien</Filter>
     </ClCompile>
     <ClCompile Include="Individual.cpp">
@@ -119,7 +107,7 @@
     <ClCompile Include="Action.cpp">
       <Filter>Quelldateien</Filter>
     </ClCompile>
-    <ClCompile Include="gridSelection.cpp">
+    <ClCompile Include="GridSelection.cpp">
       <Filter>Quelldateien</Filter>
     </ClCompile>
     <ClCompile Include="GridPOI.cpp">
@@ -207,6 +195,15 @@
       <Filter>Quelldateien</Filter>
     </ClCompile>
     <ClCompile Include="EvolutionCore.ixx">
+      <Filter>Quelldateien</Filter>
+    </ClCompile>
+    <ClCompile Include="EvoPixelCoords.ixx">
+      <Filter>Quelldateien</Filter>
+    </ClCompile>
+    <ClCompile Include="EvoStatistics.ixx">
+      <Filter>Quelldateien</Filter>
+    </ClCompile>
+    <ClCompile Include="PixelCore.ixx">
       <Filter>Quelldateien</Filter>
     </ClCompile>
   </ItemGroup>
