work on EventViewer

--- a/NNet/NNetSimu/WindowConfiguration1.cnf
+++ b/NNet/NNetSimu/WindowConfiguration1.cnf
@@ -1,17 +1,17 @@
-MoveWindow IDM_APPL_WINDOW -1842 1106 1815 1002
-MoveWindow IDM_MAIN_WINDOW -1834 1158 1800 921
-MoveWindow IDM_MINI_WINDOW -792 1147 659 659
-MoveWindow IDM_MONITOR_WINDOW -1887 1427 516 288
+MoveWindow IDM_APPL_WINDOW -1863 1114 1788 994
+MoveWindow IDM_MAIN_WINDOW -1855 1166 1773 913
+MoveWindow IDM_MINI_WINDOW -792 1147 665 665
+MoveWindow IDM_MONITOR_WINDOW -1887 1427 522 294
 MoveWindow IDM_CRSR_WINDOW -795 1794 302 227
 MoveWindow IDM_PARAM_WINDOW -318 1554 282 556
 MoveWindow IDM_PERF_WINDOW -326 1451 302 352
-MoveWindow IDM_DESC_WINDOW -1828 1367 659 659
-MoveWindow IDM_SIG_DESIGNER -1219 1141 1013 860
-MoveWindow IDM_LUT_DESIGNER -686 1561 334 234
+MoveWindow IDM_DESC_WINDOW -1828 1367 665 665
+MoveWindow IDM_SIG_DESIGNER -830 1214 799 776
+MoveWindow IDM_LUT_DESIGNER -716 1743 340 256
 ShowWindow IDM_APPL_WINDOW SW_SHOWNORMAL
 ShowWindow IDM_MAIN_WINDOW SW_SHOWNORMAL
 ShowWindow IDM_MINI_WINDOW SW_HIDE
-ShowWindow IDM_MONITOR_WINDOW SW_SHOWNORMAL
+ShowWindow IDM_MONITOR_WINDOW SW_HIDE
 ShowWindow IDM_CRSR_WINDOW SW_HIDE
 ShowWindow IDM_PARAM_WINDOW SW_SHOWNORMAL
 ShowWindow IDM_PERF_WINDOW SW_HIDE
