--- a/Toolbox/Win32_utilities/Win32_utilities.vcxproj.filters
+++ b/Toolbox/Win32_utilities/Win32_utilities.vcxproj.filters
@@ -234,5 +234,8 @@
     <ClCompile Include="StatusBarDisplayFunctor.ixx">
       <Filter>Quelldateien</Filter>
     </ClCompile>
+    <ClCompile Include="AppStartProtocol.ixx">
+      <Filter>Quelldateien</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
