MessageBox "Model locked" Work on NNetViewer

--- a/NNet/NNetSimu/WindowConfiguration2.cnf
+++ b/NNet/NNetSimu/WindowConfiguration2.cnf
@@ -1,12 +1,13 @@
-MoveWindow IDM_APPL_WINDOW -1799 1157 1650 860
-MoveWindow IDM_MAIN_WINDOW -1791 1209 1635 779
-MoveWindow IDM_MINI_WINDOW 0 0 305 305
-MoveWindow IDM_MONITOR_WINDOW 200 0 140 205
+MoveWindow IDM_APPL_WINDOW -1799 1157 1655 865
+MoveWindow IDM_MAIN_WINDOW -1791 1209 1640 784
+MoveWindow IDM_MINI_WINDOW 0 0 310 310
+MoveWindow IDM_MONITOR_WINDOW -1430 1263 1100 371
 MoveWindow IDM_CRSR_WINDOW 0 300 302 227
-MoveWindow IDM_PARAM_WINDOW 60 104 282 598
+MoveWindow IDM_PARAM_WINDOW 60 104 282 556
 MoveWindow IDM_PERF_WINDOW 0 0 302 352
-MoveWindow IDM_DESC_WINDOW 0 0 305 305
-MoveWindow IDM_SIG_DESIGNER 100 100 505 405
+MoveWindow IDM_DESC_WINDOW 0 0 310 310
+MoveWindow IDM_SIG_DESIGNER 100 100 510 410
+MoveWindow IDM_LUT_DESIGNER 200 200 305 205
 ShowWindow IDM_APPL_WINDOW SW_SHOWNORMAL
 ShowWindow IDM_MAIN_WINDOW SW_SHOWNORMAL
 ShowWindow IDM_MINI_WINDOW SW_HIDE
@@ -16,3 +17,4 @@ ShowWindow IDM_PARAM_WINDOW SW_HIDE
 ShowWindow IDM_PERF_WINDOW SW_HIDE
 ShowWindow IDM_DESC_WINDOW SW_HIDE
 ShowWindow IDM_SIG_DESIGNER SW_HIDE
+ShowWindow IDM_LUT_DESIGNER SW_HIDE
