--- a/Toolbox/Utilities/Utilities.vcxproj
+++ b/Toolbox/Utilities/Utilities.vcxproj
@@ -51,6 +51,7 @@
     <ClCompile Include="Trace.ixx" />
     <ClCompile Include="Uniform2D.ixx" />
     <ClCompile Include="Vector2D.ixx" />
+    <ClCompile Include="XArray.ixx" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\BasicUtils\BasicUtils.vcxproj">
