--- a/Toolbox/Utilities/Utilities.vcxproj
+++ b/Toolbox/Utilities/Utilities.vcxproj
@@ -47,6 +47,7 @@
     <ClCompile Include="SoundInterface.ixx" />
     <ClCompile Include="TextBuffer.cpp" />
     <ClCompile Include="TextBuffer.ixx" />
+    <ClCompile Include="TimestampList.ixx" />
     <ClCompile Include="Trace.cpp" />
     <ClCompile Include="Trace.ixx" />
     <ClCompile Include="Uniform2D.ixx" />
