--- a/NNet/ModelIO/ModelIO.vcxproj
+++ b/NNet/ModelIO/ModelIO.vcxproj
@@ -178,7 +178,7 @@
     <ClCompile Include="WrapNrOfTracks.ixx" />
     <ClCompile Include="WrapProtocol.ixx" />
     <ClCompile Include="WrapScanImage.ixx" />
-    <ClCompile Include="WrapTimeStamp.ixx" />
+    <ClCompile Include="WrapTimestamp.ixx" />
     <ClCompile Include="WrapSetGrid.ixx" />
     <ClCompile Include="WrapSetScanArea.ixx" />
     <ClCompile Include="WrapSetSigGen.ixx" />
