--- a/NNet/ModelIO/ModelIO.vcxproj.filters
+++ b/NNet/ModelIO/ModelIO.vcxproj.filters
@@ -79,7 +79,7 @@
     <ClCompile Include="WrapColorLUT.ixx">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="WrapTimeStamp.ixx">
+    <ClCompile Include="WrapTimestamp.ixx">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
