--- a/NNet/NNetViewer/NNetViewer.vcxproj
+++ b/NNet/NNetViewer/NNetViewer.vcxproj
@@ -144,6 +144,7 @@
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="ScanPanel.cpp" />
     <ClCompile Include="ScanViewerMenu.cpp" />
     <ClCompile Include="ScanViewerMenu.ixx" />
     <ClCompile Include="ScanViewerWindow.cpp" />
