--- a/NNet/NNetSimu/NNetSimu.vcxproj
+++ b/NNet/NNetSimu/NNetSimu.vcxproj
@@ -176,6 +176,8 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Accelerators.ixx" />
+    <ClCompile Include="NNetAppWindow.cpp" />
+    <ClCompile Include="NNetAppWindow.ixx" />
     <ClCompile Include="NNetSimu.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -199,8 +201,20 @@
     <ProjectReference Include="..\..\Toolbox\Win32_utilities\Win32_utilities.vcxproj">
       <Project>{7c1b51ed-011d-4b73-867c-ac23f0a9e6d1}</Project>
     </ProjectReference>
+    <ProjectReference Include="..\ModelIO\ModelIO.vcxproj">
+      <Project>{e33a1409-350a-457f-ba47-e84659426576}</Project>
+    </ProjectReference>
     <ProjectReference Include="..\NNetModel\NNetModel.vcxproj">
       <Project>{93dedccb-8be5-48af-8e14-da2a19870565}</Project>
+    </ProjectReference>
+    <ProjectReference Include="..\NNetScan\NNetScan.vcxproj">
+      <Project>{c96207f8-3237-4301-9183-641fcba2c83d}</Project>
+    </ProjectReference>
+    <ProjectReference Include="..\NNetSignals\NNetSignals.vcxproj">
+      <Project>{552a4922-9660-4144-9220-7f0d4e95a97d}</Project>
+    </ProjectReference>
+    <ProjectReference Include="..\NNetViewer\NNetViewer.vcxproj">
+      <Project>{6d4cd2e0-4c6c-4ef8-ad37-6908dee4269a}</Project>
     </ProjectReference>
     <ProjectReference Include="..\NNetWindows\NNetWindows.vcxproj">
       <Project>{4902962c-f97d-458f-9528-15dda5b7f846}</Project>
