--- a/NNet/NNetViewer/NNetViewer.vcxproj.filters
+++ b/NNet/NNetViewer/NNetViewer.vcxproj.filters
@@ -44,6 +44,12 @@
     <ClCompile Include="ScanViewer.ixx">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="EventViewer.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="EventViewer.ixx">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="NNetViewer.rc">
