--- a/NNet/NNetWindows/NNetWindows.vcxproj
+++ b/NNet/NNetWindows/NNetWindows.vcxproj
@@ -605,6 +605,9 @@
     <ClCompile Include="SimulationControl.ixx" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\Toolbox\BasicUtils\BasicUtils.vcxproj">
+      <Project>{62c73be1-212f-4084-80e8-f8d0b79f3498}</Project>
+    </ProjectReference>
     <ProjectReference Include="..\..\Toolbox\Commands\Commands.vcxproj">
       <Project>{7f40ede9-bae2-4924-87d3-5cd19477b54a}</Project>
     </ProjectReference>
@@ -617,20 +620,23 @@
     <ProjectReference Include="..\..\Toolbox\runtimeCPP\runtimeCPP.vcxproj">
       <Project>{dd49b1e3-6916-4230-b2a7-9e16e6ecdf95}</Project>
     </ProjectReference>
+    <ProjectReference Include="..\..\Toolbox\Types\Types.vcxproj">
+      <Project>{c1e2d8d5-65ed-4991-a962-45117c2a245e}</Project>
+    </ProjectReference>
     <ProjectReference Include="..\..\Toolbox\Utilities\Utilities.vcxproj">
       <Project>{d6e82f0a-c93f-4fa0-aacf-910ef2f59fdc}</Project>
     </ProjectReference>
     <ProjectReference Include="..\..\Toolbox\Win32_utilities\Win32_utilities.vcxproj">
       <Project>{7c1b51ed-011d-4b73-867c-ac23f0a9e6d1}</Project>
     </ProjectReference>
+    <ProjectReference Include="..\ModelIO\ModelIO.vcxproj">
+      <Project>{e33a1409-350a-457f-ba47-e84659426576}</Project>
+    </ProjectReference>
     <ProjectReference Include="..\NNetCommands\NNetCommands.vcxproj">
       <Project>{5f8877e6-8159-4cd4-84ac-53aa018885ac}</Project>
     </ProjectReference>
     <ProjectReference Include="..\NNetModel\NNetModel.vcxproj">
       <Project>{93dedccb-8be5-48af-8e14-da2a19870565}</Project>
-    </ProjectReference>
-    <ProjectReference Include="..\NNetScan\NNetScan.vcxproj">
-      <Project>{c96207f8-3237-4301-9183-641fcba2c83d}</Project>
     </ProjectReference>
     <ProjectReference Include="..\NNetSignals\NNetSignals.vcxproj">
       <Project>{552a4922-9660-4144-9220-7f0d4e95a97d}</Project>
