--- a/NNet/ModelIO/ModelIO.vcxproj
+++ b/NNet/ModelIO/ModelIO.vcxproj
@@ -173,6 +173,7 @@
     <ClCompile Include="WrapColorLUT.ixx" />
     <ClCompile Include="WrapDescription.ixx" />
     <ClCompile Include="WrapEmphasized.ixx" />
+    <ClCompile Include="WrapEvent.ixx" />
     <ClCompile Include="WrapGlobalParameter.ixx" />
     <ClCompile Include="WrapNrOfNobs.ixx" />
     <ClCompile Include="WrapNrOfTracks.ixx" />
