--- a/NNet/NNetSimu/WindowConfiguration1.cnf
+++ b/NNet/NNetSimu/WindowConfiguration1.cnf
@@ -1,17 +1,17 @@
-MoveWindow IDM_APPL_WINDOW -1863 1114 1807 1013
-MoveWindow IDM_MAIN_WINDOW -1855 1166 1792 932
-MoveWindow IDM_MINI_WINDOW -792 1147 684 684
-MoveWindow IDM_MONITOR_WINDOW -1887 1427 541 313
+MoveWindow IDM_APPL_WINDOW -1863 1080 1813 1019
+MoveWindow IDM_MAIN_WINDOW -1855 1132 1798 938
+MoveWindow IDM_MINI_WINDOW -792 1147 690 690
+MoveWindow IDM_MONITOR_WINDOW -1806 1450 630 319
 MoveWindow IDM_CRSR_WINDOW -795 1794 302 227
 MoveWindow IDM_PARAM_WINDOW -318 1554 282 556
 MoveWindow IDM_PERF_WINDOW -326 1451 302 352
-MoveWindow IDM_DESC_WINDOW -1828 1367 684 684
-MoveWindow IDM_SIG_DESIGNER -830 1214 818 795
-MoveWindow IDM_LUT_DESIGNER -716 1743 359 275
+MoveWindow IDM_DESC_WINDOW -1828 1367 690 690
+MoveWindow IDM_SIG_DESIGNER -830 1214 824 801
+MoveWindow IDM_LUT_DESIGNER -716 1743 365 281
 ShowWindow IDM_APPL_WINDOW SW_SHOWNORMAL
 ShowWindow IDM_MAIN_WINDOW SW_SHOWNORMAL
 ShowWindow IDM_MINI_WINDOW SW_HIDE
-ShowWindow IDM_MONITOR_WINDOW SW_HIDE
+ShowWindow IDM_MONITOR_WINDOW SW_SHOWNORMAL
 ShowWindow IDM_CRSR_WINDOW SW_HIDE
 ShowWindow IDM_PARAM_WINDOW SW_SHOWNORMAL
 ShowWindow IDM_PERF_WINDOW SW_HIDE
