removed DestroyWindow and Stop functions everywere

--- a/NNet/NNetSimu/WindowConfiguration1.cnf
+++ b/NNet/NNetSimu/WindowConfiguration1.cnf
@@ -1,20 +1,20 @@
-MoveWindow IDM_APPL_WINDOW -1863 1080 1827 1033
-MoveWindow IDM_MAIN_WINDOW -1854 1133 1809 951
-MoveWindow IDM_MINI_WINDOW -792 1147 704 704
-MoveWindow IDM_MONITOR_WINDOW -1806 1450 644 333
+MoveWindow IDM_APPL_WINDOW -1888 1096 1836 1020
+MoveWindow IDM_MAIN_WINDOW -1879 1149 1818 938
+MoveWindow IDM_MINI_WINDOW -792 1147 713 713
+MoveWindow IDM_MONITOR_WINDOW -1806 1450 653 342
 MoveWindow IDM_CRSR_WINDOW -795 1794 302 227
 MoveWindow IDM_PARAM_WINDOW -318 1554 282 556
 MoveWindow IDM_PERF_WINDOW -326 1451 302 352
-MoveWindow IDM_DESC_WINDOW -1828 1367 704 704
-MoveWindow IDM_SIG_DESIGNER -830 1214 838 815
-MoveWindow IDM_LUT_DESIGNER -716 1743 379 295
+MoveWindow IDM_DESC_WINDOW -1828 1367 713 713
+MoveWindow IDM_SIG_DESIGNER -830 1214 847 824
+MoveWindow IDM_LUT_DESIGNER -716 1743 388 304
 ShowWindow IDM_APPL_WINDOW SW_SHOWNORMAL
 ShowWindow IDM_MAIN_WINDOW SW_SHOWNORMAL
 ShowWindow IDM_MINI_WINDOW SW_HIDE
 ShowWindow IDM_MONITOR_WINDOW SW_HIDE
 ShowWindow IDM_CRSR_WINDOW SW_HIDE
-ShowWindow IDM_PARAM_WINDOW SW_SHOWNORMAL
+ShowWindow IDM_PARAM_WINDOW SW_HIDE
 ShowWindow IDM_PERF_WINDOW SW_HIDE
 ShowWindow IDM_DESC_WINDOW SW_HIDE
-ShowWindow IDM_SIG_DESIGNER SW_SHOWNORMAL
+ShowWindow IDM_SIG_DESIGNER SW_HIDE
 ShowWindow IDM_LUT_DESIGNER SW_HIDE
