--- a/NNet/NNetSimu/WindowConfiguration1.cnf
+++ b/NNet/NNetSimu/WindowConfiguration1.cnf
@@ -1,17 +1,17 @@
-MoveWindow IDM_APPL_WINDOW -1888 1096 1838 1022
-MoveWindow IDM_MAIN_WINDOW -1879 1149 1820 940
-MoveWindow IDM_MINI_WINDOW -792 1147 715 715
-MoveWindow IDM_MONITOR_WINDOW -1806 1450 655 344
+MoveWindow IDM_APPL_WINDOW -1888 1096 1839 1023
+MoveWindow IDM_MAIN_WINDOW -1879 1149 1821 941
+MoveWindow IDM_MINI_WINDOW -792 1147 716 716
+MoveWindow IDM_MONITOR_WINDOW -1806 1450 656 345
 MoveWindow IDM_CRSR_WINDOW -795 1794 302 227
 MoveWindow IDM_PARAM_WINDOW -318 1554 282 556
 MoveWindow IDM_PERF_WINDOW -326 1451 302 352
-MoveWindow IDM_DESC_WINDOW -1828 1367 715 715
-MoveWindow IDM_SIG_DESIGNER -830 1214 849 826
-MoveWindow IDM_LUT_DESIGNER -716 1743 390 306
+MoveWindow IDM_DESC_WINDOW -1828 1367 716 716
+MoveWindow IDM_SIG_DESIGNER -830 1214 850 827
+MoveWindow IDM_LUT_DESIGNER -716 1743 391 307
 ShowWindow IDM_APPL_WINDOW SW_SHOWNORMAL
 ShowWindow IDM_MAIN_WINDOW SW_SHOWNORMAL
 ShowWindow IDM_MINI_WINDOW SW_HIDE
-ShowWindow IDM_MONITOR_WINDOW SW_HIDE
+ShowWindow IDM_MONITOR_WINDOW SW_SHOWNORMAL
 ShowWindow IDM_CRSR_WINDOW SW_HIDE
 ShowWindow IDM_PARAM_WINDOW SW_HIDE
 ShowWindow IDM_PERF_WINDOW SW_HIDE
