--- a/NNet/NNetSimu/WindowConfiguration1.cnf
+++ b/NNet/NNetSimu/WindowConfiguration1.cnf
@@ -1,13 +1,14 @@
-MoveWindow IDM_APPL_WINDOW -1848 1133 1691 948
-MoveWindow IDM_MAIN_WINDOW -1839 1186 1673 866
-MoveWindow IDM_MINI_WINDOW -722 1080 323 323
-MoveWindow IDM_MONITOR_WINDOW -1775 1698 508 294
-MoveWindow IDM_CRSR_WINDOW -701 1423 302 227
+MoveWindow IDM_APPL_WINDOW -1848 1133 1694 951
+MoveWindow IDM_MAIN_WINDOW -1839 1186 1676 869
+MoveWindow IDM_MINI_WINDOW -723 1160 326 326
+MoveWindow IDM_MONITOR_WINDOW -1775 1698 511 297
+MoveWindow IDM_CRSR_WINDOW -733 1521 302 227
 MoveWindow IDM_PARAM_WINDOW -1895 1317 282 556
 MoveWindow IDM_PERF_WINDOW -371 1693 302 352
-MoveWindow IDM_DESC_WINDOW -1506 1352 315 315
-MoveWindow IDM_SIG_DESIGNER -1795 1673 515 415
-MoveWindow IDM_LUT_DESIGNER -797 1745 315 215
+MoveWindow IDM_DESC_WINDOW -1506 1352 318 318
+MoveWindow IDM_SIG_DESIGNER -1795 1673 518 418
+MoveWindow IDM_LUT_DESIGNER -797 1745 318 218
+MoveWindow IDM_VIEWER_WINDOW 166 203 1647 857
 ShowWindow IDM_APPL_WINDOW SW_SHOWNORMAL
 ShowWindow IDM_MAIN_WINDOW SW_SHOWNORMAL
 ShowWindow IDM_MINI_WINDOW SW_SHOWNORMAL
@@ -18,3 +19,4 @@ ShowWindow IDM_PERF_WINDOW SW_SHOWNORMAL
 ShowWindow IDM_DESC_WINDOW SW_HIDE
 ShowWindow IDM_SIG_DESIGNER SW_HIDE
 ShowWindow IDM_LUT_DESIGNER SW_HIDE
+ShowWindow IDM_VIEWER_WINDOW SW_SHOWNORMAL
