--- a/NNet/NNetViewer/NNetViewer.vcxproj.filters
+++ b/NNet/NNetViewer/NNetViewer.vcxproj.filters
@@ -50,6 +50,9 @@
     <ClCompile Include="PanelPlatform.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="ScanViewer.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="NNetViewer.rc">
