Remove scan implemented

--- a/NNet/NNetSimu/WindowConfiguration1.cnf
+++ b/NNet/NNetSimu/WindowConfiguration1.cnf
@@ -1,14 +1,14 @@
-MoveWindow IDM_APPL_WINDOW -1848 1133 1710 967
-MoveWindow IDM_MAIN_WINDOW -1839 1186 1692 885
-MoveWindow IDM_MINI_WINDOW -723 1160 342 342
-MoveWindow IDM_MONITOR_WINDOW -1775 1698 527 313
+MoveWindow IDM_APPL_WINDOW -1848 1133 1714 971
+MoveWindow IDM_MAIN_WINDOW -1839 1186 1696 889
+MoveWindow IDM_MINI_WINDOW -723 1160 346 346
+MoveWindow IDM_MONITOR_WINDOW -1775 1698 531 317
 MoveWindow IDM_CRSR_WINDOW -733 1521 302 227
 MoveWindow IDM_PARAM_WINDOW -1895 1317 282 556
 MoveWindow IDM_PERF_WINDOW -371 1693 302 352
-MoveWindow IDM_DESC_WINDOW -1506 1352 334 334
-MoveWindow IDM_SIG_DESIGNER -1795 1673 534 434
-MoveWindow IDM_LUT_DESIGNER -797 1745 334 234
-MoveWindow IDM_VIEWER_WINDOW 213 89 1433 909
+MoveWindow IDM_DESC_WINDOW -1506 1352 338 338
+MoveWindow IDM_SIG_DESIGNER -1795 1673 538 438
+MoveWindow IDM_LUT_DESIGNER -797 1745 338 238
+MoveWindow IDM_VIEWER_WINDOW 213 89 1236 880
 ShowWindow IDM_APPL_WINDOW SW_SHOWNORMAL
 ShowWindow IDM_MAIN_WINDOW SW_SHOWNORMAL
 ShowWindow IDM_MINI_WINDOW SW_SHOWNORMAL
@@ -19,4 +19,4 @@ ShowWindow IDM_PERF_WINDOW SW_SHOWNORMAL
 ShowWindow IDM_DESC_WINDOW SW_HIDE
 ShowWindow IDM_SIG_DESIGNER SW_HIDE
 ShowWindow IDM_LUT_DESIGNER SW_HIDE
-ShowWindow IDM_VIEWER_WINDOW SW_HIDE
+ShowWindow IDM_VIEWER_WINDOW SW_SHOWNORMAL
