--- a/Toolbox/Commands/Commands.vcxproj
+++ b/Toolbox/Commands/Commands.vcxproj
@@ -22,6 +22,7 @@
     <ClCompile Include="BaseCommand.cpp" />
     <ClCompile Include="BaseCommand.ixx" />
     <ClCompile Include="BoolWrapper.ixx" />
+    <ClCompile Include="Commands.ixx" />
     <ClCompile Include="CommandStack.cpp" />
     <ClCompile Include="CommandStack.ixx" />
     <ClCompile Include="Preferences.cpp" />
