--- a/Toolbox/Commands/Commands.vcxproj.filters
+++ b/Toolbox/Commands/Commands.vcxproj.filters
@@ -54,5 +54,8 @@
     <ClCompile Include="WrapSimulationTime.ixx">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Commands.ixx">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
