--- a/NNet/NNetSimu/WindowConfiguration1.cnf
+++ b/NNet/NNetSimu/WindowConfiguration1.cnf
@@ -1,10 +1,22 @@
-MoveWindow IDM_APPL_WINDOW -1848 1133 1719 976
-MoveWindow IDM_MAIN_WINDOW -1839 1186 1701 894
-MoveWindow IDM_MINI_WINDOW -723 1160 351 351
-MoveWindow IDM_MONITOR_WINDOW -1775 1698 536 322
+MoveWindow IDM_APPL_WINDOW -1848 1133 1720 977
+MoveWindow IDM_MAIN_WINDOW -1839 1186 1702 895
+MoveWindow IDM_MINI_WINDOW -723 1160 352 352
+MoveWindow IDM_MONITOR_WINDOW -1775 1698 537 323
 MoveWindow IDM_CRSR_WINDOW -733 1521 302 227
 MoveWindow IDM_PARAM_WINDOW -1895 1317 282 556
 MoveWindow IDM_PERF_WINDOW -371 1693 302 352
-MoveWindow IDM_DESC_WINDOW -1506 1352 343 343
-MoveWindow IDM_SIG_DESIGNER -1795 1673 543 443
-MoveWindow IDM_LUT_DESIGNER -797 1745 343 243
+MoveWindow IDM_DESC_WINDOW -1506 1352 344 344
+MoveWindow IDM_SIG_DESIGNER -725 1408 544 444
+MoveWindow IDM_LUT_DESIGNER -797 1745 344 244
+MoveWindow IDM_VIEWER_WINDOW 104 104 1647 857
+ShowWindow IDM_APPL_WINDOW SW_SHOWNORMAL
+ShowWindow IDM_MAIN_WINDOW SW_SHOWNORMAL
+ShowWindow IDM_MINI_WINDOW SW_SHOWNORMAL
+ShowWindow IDM_MONITOR_WINDOW SW_HIDE
+ShowWindow IDM_CRSR_WINDOW SW_SHOWNORMAL
+ShowWindow IDM_PARAM_WINDOW SW_SHOWNORMAL
+ShowWindow IDM_PERF_WINDOW SW_SHOWNORMAL
+ShowWindow IDM_DESC_WINDOW SW_SHOWNORMAL
+ShowWindow IDM_SIG_DESIGNER SW_SHOWNORMAL
+ShowWindow IDM_LUT_DESIGNER SW_SHOWNORMAL
+ShowWindow IDM_VIEWER_WINDOW SW_SHOWNORMAL
