--- a/Toolbox/Win32_utilities/Win32_utilities.vcxproj.filters
+++ b/Toolbox/Win32_utilities/Win32_utilities.vcxproj.filters
@@ -180,7 +180,7 @@
     <ClCompile Include="WinCommand.ixx">
       <Filter>Quelldateien</Filter>
     </ClCompile>
-    <ClCompile Include="Win32_Animation.ixx">
+    <ClCompile Include="Animation.ixx">
       <Filter>Quelldateien</Filter>
     </ClCompile>
     <ClCompile Include="StatusBar.cpp">
