--- a/Toolbox/IoUtil/IoUtil.vcxproj.filters
+++ b/Toolbox/IoUtil/IoUtil.vcxproj.filters
@@ -36,5 +36,11 @@
     <ClCompile Include="IoPixelTypes.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Preferences.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Preferences.ixx">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
